--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,13 +5,15 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
+  <h2>Welcome to fpvlaptracker</h2>
   <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
+    This is the fpvlaptracker tracker node configuration software.
   </p>
   <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
+    You can use this app to easily set up the race tracker nodes.
   </p>
+  <p>
+    Alternatively you can use it as standalone tracker.
+  </p>
+
 </ion-content>
