--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,6 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Tracker" tabIcon="bluetooth"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Race" tabIcon="game-controller-a"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Settings" tabIcon="settings"></ion-tab>
 </ion-tabs>
