added sleep mode prevention added settings fixed race bug

--- a/src/pages/race/race.html
+++ b/src/pages/race/race.html
@@ -25,6 +25,14 @@
         </ion-row>
         <ion-row>
             <ion-col>
+                Current lap:
+            </ion-col>
+            <ion-col>
+                {{currentLap}} / {{maxLaps}}
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col>
                 Last lap time:
             </ion-col>
             <ion-col>
@@ -64,7 +72,7 @@
         </ion-row>
         <ion-row>
             <ion-col>
-                <p *ngIf="currentLap > 0">not finished a lap yet</p>
+                <p [hidden]="currentLap > 0">not finished a lap yet, waiting for first lap</p>
                 <p *ngFor="let lap of lapTimes; let i = index">Lap {{i + 1}}: {{convertTime(lap)}}</p>
             </ion-col>
             <ion-col>
