added channel scanner fixed average lap issue

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -33,5 +33,12 @@
             <ion-checkbox [(ngModel)]="keepAwakeDuringRace"></ion-checkbox>
         </ion-item>
 
+        <ion-item>
+            <button ion-button icon-left (click)="gotoScanner()">
+                    <ion-icon name="funnel"></ion-icon> 
+                Scan all channels
+            </button>
+        </ion-item>
+
     </ion-list>
 </ion-content>
