improved channel scanner, overall improvements and fixes

--- a/src/pages/scanner/scanner.html
+++ b/src/pages/scanner/scanner.html
@@ -4,16 +4,22 @@
             Channel Scanner
         </ion-title>
         <ion-buttons end>
-            <button ion-button icon-left (click)="scanChannels()">
-                    <ion-icon name="refresh"></ion-icon> 
+            <button [hidden]="scanRunning" ion-button icon-left (click)="startScanChannels()">
+                <ion-icon name="stats"></ion-icon> 
                 Scan
             </button>
-        </ion-buttons>
+            <button [hidden]="!scanRunning" ion-button icon-left (click)="stopScanChannels()">
+                <ion-icon name="hand"></ion-icon> 
+                Stop
+        </button>
+    </ion-buttons>
     </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-    <p>Got maximum RSSI ({{maxRssi}}) on frequency {{maxFreq}} MHz.</p>
-    <p *ngFor="let channel of channels">{{channel.freq}} MHz: {{channel.rssi}}</p>
-    <p [hidden]="channels.length > 0">Press Scan to start channel scan!</p>
+    <p [hidden]="scanRunning">Press Scan to start channel scan!</p>
+    <p [hidden]="!scanRunning">Press Stop to stop channel scan!</p>
+    <hr />
+    <p>Got maximum RSSI ({{maxRssi}}) on {{maxChannel}} ({{maxFreq}} MHz).</p>
+    <p *ngFor="let channel of channels">{{channel.channel}} ({{channel.freq}} MHz): {{channel.rssi}}</p>
 </ion-content>
