first running ionic 3.9

--- a/src/pages/bluetooth/bluetooth.html
+++ b/src/pages/bluetooth/bluetooth.html
@@ -4,7 +4,7 @@
             Bluetooth
         </ion-title>
         <ion-buttons end>
-            <button ion-button icon-left (click)="reload()">
+            <button ion-button icon-start (click)="reload()">
                     <ion-icon name="refresh"></ion-icon> 
                 Reload
             </button>
