--- a/src/pages/fastrssi/fastrssi.html
+++ b/src/pages/fastrssi/fastrssi.html
@@ -4,11 +4,11 @@
             Fast RSSI monitor
         </ion-title>
         <ion-buttons end>
-            <button [hidden]="fastrssiRunning" ion-button icon-left (click)="startFastRssi()">
+            <button [hidden]="fastrssiRunning" ion-button icon-start (click)="startFastRssi()">
                 <ion-icon name="stats"></ion-icon> 
                 Start
             </button>
-            <button [hidden]="!fastrssiRunning" ion-button icon-left (click)="stopFastRssi()">
+            <button [hidden]="!fastrssiRunning" ion-button icon-start (click)="stopFastRssi()">
                 <ion-icon name="hand"></ion-icon> 
                 Stop
         </button>
