--- a/src/pages/race/race.html
+++ b/src/pages/race/race.html
@@ -4,7 +4,7 @@
             Race
         </ion-title>
         <ion-buttons end>
-            <button ion-button icon-left (click)="restartRace()">
+            <button ion-button icon-start (click)="restartRace()">
                     <ion-icon name="refresh"></ion-icon> 
                 Restart
             </button>
