--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,13 +7,13 @@
 <ion-content padding>
   <h2>Welcome to fpvlaptracker</h2>
   <p>
-    This is the fpvlaptracker tracker node configuration software.
+    This is the fpvlaptracker tracker unit configuration software.
   </p>
   <p>
-    You can use this app to easily set up the race tracker nodes.
+    You can use this app to easily set up the race tracker units.
   </p>
   <p>
-    Alternatively you can use it as standalone tracker.
+    Also you can use it as standalone tracker for practicing with a single quad.
   </p>
 
 </ion-content>
