--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -14,9 +14,9 @@
 
 <ion-content padding>
     <ion-list>
-        <h2>Selected node</h2>
+        <h2>Selected unit</h2>
         <ion-item>
-            <p>Currently selected node: {{bluetoothDevice}}</p>
+            <p>Currently selected unit: {{bluetoothDevice}}</p>
             <button ion-button icon-start (click)="gotoBluetoothSelection()">
                 <ion-icon name="bluetooth"></ion-icon> 
                 Select bluetooth device
